<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_dishes">

    <fragment
        android:id="@+id/navigation_all_dishes"
        android:name="com.yagmurerdogan.favdish.view.fragments.AllDishesFragment"
        android:label="@string/title_all_dishes"
        tools:layout="@layout/fragment_all_dishes" />

    <fragment
        android:id="@+id/navigation_favorite_dishes"
        android:name="com.yagmurerdogan.favdish.view.fragments.FavoriteDishesFragment"
        android:label="@string/title_favorite_dishes"
        tools:layout="@layout/fragment_favorite_dishes" />

    <fragment
        android:id="@+id/navigation_random_dish"
        android:name="com.yagmurerdogan.favdish.view.fragments.RandomDishFragment"
        android:label="@string/title_random_dish"
        tools:layout="@layout/fragment_random_dish" />
</navigation>